--- a/nfl-wallet-test/helm-values.yaml
+++ b/nfl-wallet-test/helm-values.yaml
@@ -47,6 +47,7 @@ nfl-wallet:
     route:
       enabled: true
       host: ""
+      serviceName: nfl-wallet-gateway-istio
       targetPort: http
     rateLimitBills:
       enabled: true
