--- a/nfl-wallet-prod/helm-values.yaml
+++ b/nfl-wallet-prod/helm-values.yaml
@@ -1,5 +1,6 @@
 # NFL Wallet - PROD (full profile: gateway, API keys, auth policy, rate limit, observability)
 # Values under "nfl-wallet" so the dependency subchart receives them (Gateway + HTTPRoutes).
+# Spec alignment: §5 hostname; §6 credentials + APP_ID header to backend; §7 metrics + consumer ratios; §8 tracing; §12 Blue/Green via route weights if supported.
 
 nfl-wallet:
   imageNamespace: maximilianopizarro
@@ -34,6 +35,7 @@ nfl-wallet:
     apiRaidersUrl: ""
     mobileAppDownloadUrl: ""
 
+  # Spec §6: subscription model; set customers, bills, raiders via Sealed Secrets; AuthPolicy injects APP_ID (or equivalent) to backend
   apiKeys:
     enabled: true
     customers: ""
@@ -46,7 +48,8 @@ nfl-wallet:
     existingGatewayName: ""
     route:
       enabled: true
-      host: ""
+      # Spec §5: hostname for HTTPRoute; set to your prod API host e.g. api-nfl-wallet-prod.<domain>
+      host: "api-nfl-wallet-prod.local"
       serviceName: nfl-wallet-gateway-istio
       targetPort: http
     rateLimitBills:
@@ -61,6 +64,7 @@ nfl-wallet:
         conditions: []
         counterExpressions: []
 
+  # Spec §6: allow only valid credentials; global AuthorizationPolicy deny/allow by identity
   authorizationPolicy:
     enabled: true
     requireForCustomers: true
@@ -70,6 +74,7 @@ nfl-wallet:
   topology:
     applicationName: nfl-wallet
 
+  # Spec §7: traffic by API/path, response codes, latency, consumer ratios; §8: end-to-end tracing (W3C trace context)
   observability:
     rhobs:
       enabled: true
