--- a/nfl-wallet-test/helm-values.yaml
+++ b/nfl-wallet-test/helm-values.yaml
@@ -1,5 +1,6 @@
-# NFL Wallet - TEST (full profile: gateway, APIs, webapp, optional observability)
+# NFL Wallet - TEST (full profile: gateway, APIs, webapp, rate limit, auth, observability)
 # Values under "nfl-wallet" so the dependency subchart receives them (Gateway + HTTPRoutes).
+# Spec alignment: §5 hostname; §6 credential-based access (API keys + AuthPolicy); §7 rate limit + metrics; §7/8 observability.
 
 nfl-wallet:
   imageNamespace: maximilianopizarro
@@ -34,8 +35,9 @@ nfl-wallet:
     apiRaidersUrl: ""
     mobileAppDownloadUrl: ""
 
+  # Spec §6: subscription / credential-based access; set via Sealed Secrets or env
   apiKeys:
-    enabled: false
+    enabled: true
     customers: ""
     bills: ""
     raiders: ""
@@ -46,23 +48,26 @@ nfl-wallet:
     existingGatewayName: ""
     route:
       enabled: true
-      host: ""
+      # Spec §5: hostname for HTTPRoute; set to your API host e.g. api-nfl-wallet-test.<domain>
+      host: "api-nfl-wallet-test.local"
       serviceName: nfl-wallet-gateway-istio
       targetPort: http
     rateLimitBills:
       enabled: true
       permitLimit: 100
       fillIntervalSeconds: 60
+    # Spec §7/10: Kuadrant RateLimitPolicy for usage metrics and rate limiting
     rateLimitPolicy:
-      enabled: false
+      enabled: true
       bills:
         limit: 100
         window: 1m
         conditions: []
         counterExpressions: []
 
+  # Spec §6: deny access without valid credentials; namespace with keys can consume, others get 401
   authorizationPolicy:
-    enabled: false
+    enabled: true
     requireForCustomers: true
     requireForBills: true
     requireForRaiders: true
@@ -76,9 +81,10 @@ nfl-wallet:
       namespace: openshift-cluster-observability-operator
       thanosQuerier:
         enabled: false
+      # Spec §7: traffic by API/path, response codes, latency; §8 tracing readiness
       podMonitorGateway:
-        enabled: false
+        enabled: true
       serviceMonitorGateway:
-        enabled: false
+        enabled: true
       uiPlugin:
         enabled: false
