--- a/nfl-wallet-test/templates/auth-policy.yaml
+++ b/nfl-wallet-test/templates/auth-policy.yaml
@@ -1,6 +1,6 @@
 # AuthPolicy: restricts access to test APIs to consumers with valid API keys (label api=<namespace>).
 # Dev has no test keys, so dev is denied access to test (Spec §6: subscription / credential-based access).
-apiVersion: kuadrant.io/v1beta2
+apiVersion: kuadrant.io/v1
 kind: AuthPolicy
 metadata:
   name: nfl-wallet-test-auth
