--- a/nfl-wallet-test/helm-values.yaml
+++ b/nfl-wallet-test/helm-values.yaml
@@ -35,6 +35,9 @@ nfl-wallet:
     apiRaidersUrl: ""
     mobileAppDownloadUrl: ""
 
+  # Gateway name for AuthPolicy targetRef (must match the Gateway resource created by the nfl-wallet chart; run: kubectl get gateway -n <namespace>)
+  gatewayPolicyGatewayName: "gateway"
+
   # Spec §6: subscription / credential-based access; set via Sealed Secrets or env
   apiKeys:
     enabled: true
