--- a/nfl-wallet-prod/templates/bluegreen-httproute.yaml
+++ b/nfl-wallet-prod/templates/bluegreen-httproute.yaml
@@ -1,6 +1,6 @@
 # Blue/Green HTTPRoute: only created when nfl-wallet.blueGreen.enabled is true.
 # Ensure the target Gateway exists and allows routes from this namespace before enabling.
-{{- if .Values.nfl-wallet.blueGreen.enabled }}
+{{ if .Values.nfl-wallet.blueGreen.enabled }}
 apiVersion: gateway.networking.k8s.io/v1beta1
 kind: HTTPRoute
 metadata:
@@ -33,4 +33,4 @@ spec:
           namespace: nfl-wallet-test
           port: 80
           weight: 10
-{{- end }}
+{{ end }}
