--- a/nfl-wallet-prod/templates/bluegreen-httproute.yaml
+++ b/nfl-wallet-prod/templates/bluegreen-httproute.yaml
@@ -1,6 +1,6 @@
 # Blue/Green HTTPRoute: only created when nfl-wallet.blueGreen.enabled is true.
 # Ensure the target Gateway exists and allows routes from this namespace before enabling.
-{{ if .Values.nfl-wallet.blueGreen.enabled }}
+{{ if (index .Values "nfl-wallet").blueGreen.enabled }}
 apiVersion: gateway.networking.k8s.io/v1beta1
 kind: HTTPRoute
 metadata:
@@ -16,7 +16,7 @@ spec:
   parentRefs:
     - group: gateway.networking.k8s.io
       kind: Gateway
-      name: {{ .Values.nfl-wallet.gatewayPolicyGatewayName | default "nfl-wallet-gateway-istio" }}
+      name: {{ default "nfl-wallet-gateway-istio" (index .Values "nfl-wallet").gatewayPolicyGatewayName }}
       namespace: {{ .Release.Namespace }}
   hostnames:
     - "api-nfl-wallet.local"
