--- a/nfl-wallet-test/templates/auth-policy.yaml
+++ b/nfl-wallet-test/templates/auth-policy.yaml
@@ -15,7 +15,7 @@ spec:
   targetRef:
     group: gateway.networking.k8s.io
     kind: Gateway
-    name: {{ .Values.nfl-wallet.gatewayPolicyGatewayName | default "nfl-wallet-gateway-istio" }}
+    name: {{ default "nfl-wallet-gateway-istio" (index .Values "nfl-wallet").gatewayPolicyGatewayName }}
     namespace: {{ .Release.Namespace }}
   rules:
     authentication:
