--- a/nfl-wallet-prod/helm-values.yaml
+++ b/nfl-wallet-prod/helm-values.yaml
@@ -35,8 +35,8 @@ nfl-wallet:
     apiRaidersUrl: ""
     mobileAppDownloadUrl: ""
 
-  # Gateway name for AuthPolicy and Blue/Green HTTPRoute (must match the Gateway resource; run: kubectl get gateway -n <namespace>)
-  gatewayPolicyGatewayName: "gateway"
+  # Gateway name for AuthPolicy and Blue/Green HTTPRoute (must match the Gateway resource; e.g. nfl-wallet-gateway)
+  gatewayPolicyGatewayName: "nfl-wallet-gateway"
 
   # Blue/Green HTTPRoute: set enabled to true only when the target Gateway exists and allows routes from this namespace
   blueGreen:
