--- a/nfl-wallet-prod/helm-values.yaml
+++ b/nfl-wallet-prod/helm-values.yaml
@@ -36,7 +36,8 @@ nfl-wallet:
     apiRaidersUrl: ""
     mobileAppDownloadUrl: ""
 
-  # Gateway name for AuthPolicy and Blue/Green HTTPRoute (must match the Gateway resource; e.g. nfl-wallet-gateway)
+  # Gateway name for AuthPolicy and Blue/Green HTTPRoute (must match the Gateway resource created by the chart in this namespace).
+  # Same name in nfl-wallet-test and nfl-wallet-prod is correct: they are two different Gateways (namespaced).
   gatewayPolicyGatewayName: "nfl-wallet-gateway"
 
   # Blue/Green HTTPRoute: set enabled to true only when the target Gateway exists and allows routes from this namespace
