--- a/nfl-wallet-test/helm-values.yaml
+++ b/nfl-wallet-test/helm-values.yaml
@@ -40,12 +40,12 @@ nfl-wallet:
   # Same name in nfl-wallet-test and nfl-wallet-prod is correct: they are two different Gateways (namespaced).
   gatewayPolicyGatewayName: "nfl-wallet-gateway"
 
-  # Spec §6: subscription / credential-based access; set via Sealed Secrets or env
+  # Spec §6: subscription / credential-based access; defaults for pruebas (override via Sealed Secrets in prod)
   apiKeys:
     enabled: true
-    customers: ""
-    bills: ""
-    raiders: ""
+    customers: "nfl-wallet-customers-key"
+    bills: "nfl-wallet-bills-key"
+    raiders: "nfl-wallet-raiders-key"
 
   gateway:
     enabled: true
