--- a/nfl-wallet-prod/templates/api-key-secrets.yaml
+++ b/nfl-wallet-prod/templates/api-key-secrets.yaml
@@ -1,6 +1,6 @@
 # API key Secrets for Kuadrant AuthPolicy (selector api=<namespace>).
-# Each Secret must have data.api_key and label api={{ .Release.Namespace }}.
-# Set nfl-wallet.apiKeys.customers, .bills, .raiders in helm-values (or override via Sealed Secrets).
+# Authorino only watches Secrets that match its secretLabelSelector (e.g. authorino.kuadrant.io/managed-by).
+# Each Secret: data.api_key, label api={{ .Release.Namespace }}, and label for Authorino instance.
 {{- if (index .Values "nfl-wallet").apiKeys.enabled }}
 ---
 apiVersion: v1
@@ -12,6 +12,7 @@ metadata:
     app.kubernetes.io/name: nfl-wallet
     app.kubernetes.io/component: api-key
     api: {{ .Release.Namespace }}
+    authorino.kuadrant.io/managed-by: {{ (index .Values "nfl-wallet").authorinoManagedByLabel | default "authorino" }}
 type: Opaque
 stringData:
   api_key: {{ (index .Values "nfl-wallet").apiKeys.customers | default "" | quote }}
@@ -25,6 +26,7 @@ metadata:
     app.kubernetes.io/name: nfl-wallet
     app.kubernetes.io/component: api-key
     api: {{ .Release.Namespace }}
+    authorino.kuadrant.io/managed-by: {{ (index .Values "nfl-wallet").authorinoManagedByLabel | default "authorino" }}
 type: Opaque
 stringData:
   api_key: {{ (index .Values "nfl-wallet").apiKeys.bills | default "" | quote }}
@@ -38,6 +40,7 @@ metadata:
     app.kubernetes.io/name: nfl-wallet
     app.kubernetes.io/component: api-key
     api: {{ .Release.Namespace }}
+    authorino.kuadrant.io/managed-by: {{ (index .Values "nfl-wallet").authorinoManagedByLabel | default "authorino" }}
 type: Opaque
 stringData:
   api_key: {{ (index .Values "nfl-wallet").apiKeys.raiders | default "" | quote }}
