--- a/observability/grafana-operator/grafana-instance.yaml
+++ b/observability/grafana-operator/grafana-instance.yaml
@@ -11,10 +11,10 @@ metadata:
 spec:
   config:
     log:
-      mode: console
-    log_level: info
+      mode: "console"
+    # CRD expects auth.disable_login_form as string; log_level not set (invalid type in this operator version)
     auth:
-      disable_login_form: false
+      disable_login_form: "false"
   ingress:
     enabled: false
   deployment:
