--- a/nfl-wallet-prod/templates/auth-policy.yaml
+++ b/nfl-wallet-prod/templates/auth-policy.yaml
@@ -25,3 +25,6 @@ spec:
             matchLabels:
               api: {{ .Release.Namespace }}
           allNamespaces: false
+        credentials:
+          customHeader:
+            name: X-Api-Key
