--- a/observability/grafana-operator/grafana-datasource-prometheus.yaml
+++ b/observability/grafana-operator/grafana-datasource-prometheus.yaml
@@ -1,4 +1,12 @@
-# Prometheus datasource for Istio/mesh metrics. Edit spec.datasource.url to your Prometheus URL.
+# Prometheus datasource for Istio/mesh metrics.
+# IMPORTANT: Set spec.datasource.url to the Prometheus (or Thanos) URL that exists in YOUR cluster.
+# Default below assumes a Prometheus Operator install in namespace "monitoring". If you see
+# "dial tcp ... no such host" in the dashboard, this host does not exist — find the real URL:
+#   kubectl get svc -A | grep -E 'prometheus|thanos'
+# Common alternatives:
+#   - OpenShift platform: https://thanos-querier.openshift-monitoring.svc.cluster.local:9091 (TLS, may need auth)
+#   - User workload monitoring: http://prometheus-user-workload.openshift-user-workload-monitoring.svc.cluster.local:9090
+#   - Custom install: http://<prometheus-service>.<namespace>.svc.cluster.local:9090
 apiVersion: grafana.integreatly.org/v1beta1
 kind: GrafanaDatasource
 metadata:
