--- a/observability/grafana-operator/grafana-datasource-prometheus.yaml
+++ b/observability/grafana-operator/grafana-datasource-prometheus.yaml
@@ -1,6 +1,6 @@
 # Prometheus datasource for Istio/mesh metrics.
-# Default: OpenShift User Workload Monitoring (prometheus-user-workload on port 9091).
-# Override spec.datasource.url if your cluster uses a different Prometheus (e.g. Thanos in openshift-monitoring).
+# Default: OpenShift User Workload Monitoring. Port 9090 (HTTP) hits the Prometheus API directly;
+# port 9091 on prometheus-user-workload can return 404 (proxy). Override url if needed.
 apiVersion: grafana.integreatly.org/v1beta1
 kind: GrafanaDatasource
 metadata:
@@ -14,10 +14,9 @@ spec:
     name: Prometheus
     type: prometheus
     access: proxy
-    url: "https://prometheus-user-workload.openshift-user-workload-monitoring.svc.cluster.local:9091"
+    url: "http://prometheus-operated.openshift-user-workload-monitoring.svc.cluster.local:9090"
     isDefault: true
     uid: prometheus
     jsonData:
       timeInterval: "15s"
       httpMethod: POST
-      tlsSkipVerify: true
