--- a/nfl-wallet-prod/templates/bluegreen-httproute.yaml
+++ b/nfl-wallet-prod/templates/bluegreen-httproute.yaml
@@ -18,8 +18,9 @@ spec:
       kind: Gateway
       name: {{ default "nfl-wallet-gateway" (index .Values "nfl-wallet").gatewayPolicyGatewayName }}
       namespace: {{ .Release.Namespace }}
+  # Must match the host the Gateway receives (e.g. same as nfl-wallet.gateway.route.host for prod).
   hostnames:
-    - {{ (index .Values "nfl-wallet").blueGreen.hostname | default "api-nfl-wallet.local" | quote }}
+    - {{ required "nfl-wallet.blueGreen.hostname is required when blueGreen.enabled is true" (index .Values "nfl-wallet").blueGreen.hostname | quote }}
   rules:
     - matches:
         - path:
