--- a/nfl-wallet-prod/helm-values.yaml
+++ b/nfl-wallet-prod/helm-values.yaml
@@ -40,11 +40,12 @@ nfl-wallet:
   # Same name in nfl-wallet-test and nfl-wallet-prod is correct: they are two different Gateways (namespaced).
   gatewayPolicyGatewayName: "nfl-wallet-gateway"
 
-  # Blue/Green (canary): HTTPRoute that splits traffic between prod and test. Enable only when the Gateway exists and accepts routes from this namespace.
-  # hostname must match the host the Gateway receives (e.g. same as gateway.route.host so the route matches).
+  # Blue/Green (canary): HTTPRoute that splits traffic between prod and test. Use a dedicated hostname
+  # (e.g. nfl-wallet-canary.apps...) so it does not conflict with the main prod route (nfl-wallet-prod.apps...).
+  # If you use the same hostname as prod, this route can take over and cause 500 (wrong backends).
   blueGreen:
     enabled: true
-    hostname: "nfl-wallet-prod.apps.cluster-lzdjz.lzdjz.sandbox1796.opentlc.com"
+    hostname: "nfl-wallet-canary.apps.cluster-lzdjz.lzdjz.sandbox1796.opentlc.com"
     # prodWeight: 90   # % traffic to prod (default 90)
     # testWeight: 10  # % traffic to test / canary (default 10)
 
